feat: implement /accounts/{accountId}/players endpoint
